Alteraçoes no formulario e insercao de uma nova section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta charset="description" content="">
     <meta charset="Keywords" content="">
     <meta charset="Author" content="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -32,7 +35,7 @@
                     </div><!--from-wrapper-->
                     <div class="form-wrapper">
                         <p>E-mail:</p>
-                        <input type="email" name="email" required placeholder="E-Mail">
+                        <input type="email" name="email" required placeholder="E-mail">
                     </div><!--from-wrapper-->
                     <div class="form-wrapper">
                         <p>Telefone:</p>
@@ -48,6 +51,10 @@
             </div><!--form-container-->
         </div><!--container-bg-->
     </section><!--cover-form-->
-
+    <section class="chamada">
+        <div class="container">
+            <h2>Texto aleatorio para preencher o titulo</h2>
+        </div><!--container-->
+    </section><!--chamada-->
 </body>
 </html>
