--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
     </section><!--cover-form-->
     <section class="chamada">
         <div class="container">
-            <h2>Texto aleatorio para preencher o titulo</h2>
-        </div><!--container-->
+            <div><h2>Texto aleatorio para preencher o titulo</h2></div>
+            <div><p>texto de teste para paragrafo do site testando o teste</p></div>
+        </div><!--conatainer-->
     </section><!--chamada-->
 </body>
 </html>
