--- a/index.html
+++ b/index.html
@@ -57,5 +57,44 @@
             <div><p>texto de teste para paragrafo do site testando o teste</p></div>
         </div><!--conatainer-->
     </section><!--chamada-->
+    <section class="mosaico">
+        <div class="container">
+            <div class="flex-mosaico">
+                <div style="background-image:url('imagens/mosaico1.jpeg');" class="item-1-mosaico">
+                </div><!--item-1-mosaico-->
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget rutrum massa, at egestas ex. Quisque cursus turpis pretium ligula elementum placerat. Nam interdum lacus sit amet orci maximus accumsan. Fusce non mattis felis, nec vestibulum turpis. Vestibulum ante ipsum primis in faucibus</p>
+                </div><!--item-2-mosaico-->
+            </div><!--flex-mosaico-->
+            <div class="flex-mosaico" style="flex-direction: row-reverse ;">
+                <div style="background-image:url('imagens/mosaico2.jpeg');" class="item-1-mosaico">
+                </div><!--item-1-mosaico-->
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget rutrum massa, at egestas ex. Quisque cursus turpis pretium ligula elementum placerat. Nam interdum lacus sit amet orci maximus accumsan. Fusce non mattis felis, nec vestibulum turpis. Vestibulum ante ipsum primis in faucibus</p>
+                </div><!--item-2-mosaico-->
+            </div><!--flex-mosaico-->
+            <div class="flex-mosaico">
+                <div style="background-image:url('imagens/mosaico3.jpeg');" class="item-1-mosaico">
+                </div><!--item-1-mosaico-->
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget rutrum massa, at egestas ex. Quisque cursus turpis pretium ligula elementum placerat. Nam interdum lacus sit amet orci maximus accumsan. Fusce non mattis felis, nec vestibulum turpis. Vestibulum ante ipsum primis in faucibus</p>
+                </div><!--item-2-mosaico-->
+            </div><!--flex-mosaico-->
+            <div class="flex-mosaico" style="flex-direction: row-reverse ;">
+                <div style="background-image:url('imagens/mosaico4.jpeg');" class="item-1-mosaico">
+                </div><!--item-1-mosaico-->
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget rutrum massa, at egestas ex. Quisque cursus turpis pretium ligula elementum placerat. Nam interdum lacus sit amet orci maximus accumsan. Fusce non mattis felis, nec vestibulum turpis. Vestibulum ante ipsum primis in faucibus</p>
+                </div><!--item-2-mosaico-->
+            </div><!--flex-mosaico-->
+        </div><!--container-->
+    </section><!--mosaico-->
+    <div class="container">
+    <footer>
+        <img src="imagens/logo1.png">
+        <p>Todos os direitos reservados</p>
+        <p>Contato: 3222-2222</p>
+    </footer>
+    </div>
 </body>
 </html>
